[package]
name = "elec"
version = "0.1.0"
edition = "2021"
authors = ["David Dunwoody <david.dunwoody@gmail.com>"]

[dependencies]
acfutils-sys = { git = "https://github.com/ddunwoody/acfutils-sys.git" }
elec-sys = { git = "https://github.com/ddunwoody/elec-sys.git" }

[dev-dependencies]
ctrlc = "3.4.0" # for use in test example
