[package]
name = "elec"
version = "0.1.0"
edition = "2021"
authors = ["David Dunwoody <david.dunwoody@gmail.com>"]

[features]
datarefs = ["elec-sys/datarefs"]
vis = ["elec-sys/vis"]

[dependencies]
acfutils = { git = "https://github.com/ddunwoody/acfutils.git" }
acfutils-sys = { git = "https://github.com/ddunwoody/acfutils-sys.git" }
anyhow = "1.0.75"
elec-sys = { git = "https://github.com/ddunwoody/elec-sys.git" }
